@@ -1,0 +1,5 @@
+<com:TContent ID="Content">
+
+<com:TDatePicker DateFormat="MM-dd-yyyy" />
+
+</com:TContent>
